# cookiecutter-flottille

./: .gitignore  Makefile  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: pytest.yml
tests/: test_flottille_project.py
{{cookiecutter.project_slug}}/: Dockerfile  pyproject.toml
{{cookiecutter.project_slug}}/notebooks/: {{cookiecutter.project_slug}}.ipynb
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_namespace}}/models/{{cookiecutter.project_slug}}/: __init__.py  api.py  model.py
{{cookiecutter.project_slug}}/tests/unit/: test_{{cookiecutter.project_slug}}.py
